social links and ga

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -43,9 +43,9 @@
         <h1 class="title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
         <p class="description">{{ .Site.Params.Description }}</p>
         <div class="links">
-          <a href="#"><span class="fa fa-facebook"></span></a>
-          <a href="#"><span class="fa fa-twitter"></span></a>
-          <a href="#"><span class="fa fa-github"></span></a>
+          <a href="{{ .Site.Social.facebook }}"><span class="fa fa-facebook"></span></a>
+          <a href="{{ .Site.Social.twitter }}"><span class="fa fa-twitter"></span></a>
+          <a href="{{ .Site.Social.github }}"><span class="fa fa-github"></span></a>
           •
           <a href="/nisjs">O Nis JS projektu</a>
         </div>
