--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -47,7 +47,7 @@
           <a href="{{ .Site.Social.twitter }}"><span class="fa fa-twitter"></span></a>
           <a href="{{ .Site.Social.github }}"><span class="fa fa-github"></span></a>
           •
-          <a href="/nisjs">O Nis JS projektu</a>
+          <a href="/nisjs">O Niš JS projektu</a>
         </div>
       </header>
     </div>
