--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,7 +1,7 @@
 <article class="li">
     <header class="clearfix">
       <div class="pull-left">
-        <div class="image" style="background-image: url({{ $.Site.BaseURL }}images/{{ with .Params.image }}{{ . }}{{ else }}default.jpg{{ end }});"></div>
+        <a href="{{ .Permalink }}"><div class="image" style="background-image: url({{ $.Site.BaseURL }}images/{{ with .Params.image }}{{ . }}{{ else }}default.jpg{{ end }});"></div></a>
       </div>
 
       <div class="detail">
