--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -43,6 +43,8 @@
         <h1 class="title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
         <p class="description">{{ .Site.Params.Description }}</p>
         <div class="links">
+          <a href="{{ .Site.BaseURL }}/slack">Slack</a>
+          •
           <a href="{{ .Site.Social.facebook }}"><span class="fa fa-facebook"></span></a>
           <a href="{{ .Site.Social.twitter }}"><span class="fa fa-twitter"></span></a>
           <a href="{{ .Site.Social.github }}"><span class="fa fa-github"></span></a>
