add sponsors page

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -50,6 +50,8 @@
           <a href="{{ .Site.Social.github }}"><span class="fa fa-github"></span></a>
           •
           <a href="/nisjs">O Niš JS projektu</a>
+          •
+          <a href="/sponzori">Sponzori</a>
         </div>
       </header>
     </div>
