--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -189,3 +189,29 @@ a {
   color: #000000 !important;
   background: #CAB518;
 }
+
+.sponsors-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.sponsors-list > li {
+  padding: 16px 0 0;
+  border-top: 1px solid rgba(0,0,0,.12);
+  margin: 0;
+}
+
+.sponsors-list img {
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 0;
+  border: 0;
+  line-height: 0;
+}
+
+.sponsors-list .small {
+  font-size: 16px;
+}
